fix the alignment of navabar and made it responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,14 @@ nav.navbar {
   width: 100%;
   left: 0; 
 }
-
-.nav-item{
-  padding-right: 15px;
+ul{
+  margin-left:13px;
 }
+li{
+  padding-left:10px;
+  padding-right:10px;
+}
+
 #loading {
   position: fixed;
   width: 100%;
